--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lawnicons"
-        android:name="app.lawnchair.cayicons.LawniconsApplication">
+        android:name=".LawniconsApplication">
         <activity
-            android:name="app.lawnchair.cayicons.MainActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Lawnicons">
             <intent-filter>
